# hira

./: .gitignore  Cargo.toml  README.md  test.sh
.github/workflows/: pr.yml  rust.yml
book/: .gitignore  book.toml  index.css  test.sh
book/src/: SUMMARY.md  intro.md
book/src/examples/: lambda_fn.md
book/src/reference/: external_crates.md  hira.md  hirawrap.md
book/src/reference/macros/: hira.md  hiracfg.md
book/src/userguide/concepts/: depends_on.md  higher_level_modules.md  main.md  what_is_hira_module.md
book/src/userguide/gettingstarted/: hello_hira.md  hello_hira.md.bak  installation.md  main.md
examples/dynamo_hashmap/: Cargo.toml  aws_dynamodb.rhai
examples/dynamo_hashmap/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/new_mod_system/: Cargo.toml  custom_s3mod.rhai  index.html
examples/new_mod_system/src/: main.rs
examples/simple_s3_lambda_api/: Cargo.toml
examples/simple_s3_lambda_api/src/: main.rs
examples/static_website_custom/: Cargo.toml
examples/static_website_custom/src/: main.rs
examples/static_website_ez/: Cargo.toml
examples/static_website_ez/src/: main.rs
examples/using_environment_variables/: Cargo.toml  MY_ENV_FILE.txt
examples/using_environment_variables/src/: main.rs
hira/: Cargo.toml
hira/src/: lib.rs
hira_cli/: .gitignore  Cargo.toml  README.md
hira_cli/src/: main.rs
hira_lib/: Cargo.toml  README.md
hira_lib/src/: level0.rs  lib.rs  module_loading.rs  parsing.rs  wasm_types.rs
hosted/: README.md
hosted/hiracliwebsite/: Cargo.toml
hosted/hiracliwebsite/src/: lib.rs
level2/aws_cfn/: Cargo.toml
level2/aws_cfn/src/: lib.rs
level2/aws_cfn_stack/: Cargo.toml
level2/aws_cfn_stack/src/: lib.rs
level2/aws_cloudfront_distribution/: Cargo.toml
level2/aws_cloudfront_distribution/src/: lambda_url_distribution.rs  lib.rs  s3_website_distribution.rs
level2/aws_lambda/: Cargo.toml
level2/aws_lambda/src/: lib.rs
level2/aws_regions/: Cargo.toml
level2/aws_regions/src/: lib.rs
level2/aws_s3/: Cargo.toml
level2/aws_s3/src/: lib.rs
level2/dotenv_reader/: Cargo.toml
level2/dotenv_reader/src/: lib.rs
level2/echo/: Cargo.toml
level2/h_aws_acm_cert/: Cargo.toml
level2/h_aws_acm_cert/src/: lib.rs
level2/h_echo/: Cargo.toml
level2/h_echo/src/: lib.rs
real_world_examples/: .gitignore  Cargo.toml
real_world_examples/src/: lib.rs
registry/: Cargo.toml  README.md
registry/hira/: aws_lambda.rhai  aws_r53_cdn  aws_r53_cdn.rhai  modules
registry/src/: lib.rs  module_testing.rs  modules.rs
registry/src/module_testing/: cloudfront.rs  hira_awssqs.rs  lambda.rs  s3.rs
registry/src/modules/: cloudfront.rs  hira_awscfn.rs  hira_awsregions.rs  hira_awssqs.rs  lambda.rs  s3.rs
registry/src/tests/: README.md  hira_testing.rs  mod.rs  module_testing.rs
registry/src/tests/module_testing/: lambda.rs
registry_wildcard/: Cargo.toml  README.md
registry_wildcard/src/: lib.rs
src/: lib.rs  variables.rs
src/module_scripting/: mod.rs
src/module_scripting/test_fixtures/: can_add_code_after_multiple_times_without_breaking.rhai  can_add_code_before_and_after.rhai  can_add_code_inside_modules.rhai  can_rename.rhai
src/parsing/: mod.rs
src/resources/: cloudfront.rs  lambda.rs  mod.rs  route53.rs  s3_bucket.rs  static_website.rs
testing/: Cargo.toml  README.md
testing/src/: main.rs
