[workspace]
members = [
    "hira",
    "hira_lib",
    "real_world_examples",
    "level2/aws_cfn",
    "level2/aws_lambda",
    "level2/aws_regions",
    "level2/aws_cfn_stack",
]

# compile dependencies in release mode
[profile.dev.package.'*']
opt-level = 3

[profile.release.package.'*']
opt-level = 3
