[workspace]
members = [
    "hira",
    "hira_lib",
    "hira_cli",
    "hosted/hiracliwebsite",
    "real_world_examples",
    "level2/dotenv_reader",
    "level2/aws_lambda",
    "level2/aws_cfn_stack",
    "level2/aws_s3",
    "level2/aws_cloudfront_distribution",
    "level2/h_echo",
]

# compile dependencies in release mode
[profile.dev.package.'*']
opt-level = 3

[profile.release.package.'*']
opt-level = 3
