[package]
name = "hira_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
hira_lib = { path = "../hira_lib" }
proc-macro2 = "1.0.52"
syn = { version = "2", features = ["extra-traits"] }
quote = "1"
rayon = "1.7.0"
adler = "1.0.2"
