[package]
name = "hira_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.52", features = ["span-locations"] }
syn = { version = "2", features = ["extra-traits"] }
quote = "1"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
wasm_type_gen = { git = "https://github.com/nikita-skobov/wasm_type_gen", rev = "e34f27a2bd7aedf58924f66e88968514a940e3c6", optional = true }
#wasm_type_gen = { path = "../../wasm-type-gen/wasm_type_gen", optional = true }
adler32 = { version = "*", optional = true }
toml = { version = "0.7.3", optional = true }
prettyplease = "0.2.6"

[features]
default = ["wasm"]
extraparsing = []
wasm = ["wasm_type_gen", "adler32", "toml"]
web = []
