[package]
name = "real_world_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
hira = { path = "../hira" }
hira_lib = { path = "../hira_lib" }
tokio = { version = "*", features = ["full"]}
lambda_runtime = "*"
serde = { version = "*", features = ["derive"]}
serde_json = "*"

# our module depends on these other hira modules:
aws_lambda = { path = "../level2/aws_lambda" }
aws_cfn_stack = { path = "../level2/aws_cfn_stack" }
aws_cloudfront_distribution = { path = "../level2/aws_cloudfront_distribution" }

# third party dependencies can be added via extern crate:
iam = { git = "https://github.com/nikita-skobov/aws_cfn_type_gen", rev = "f903f340a75bcc64f22b63e130874282f3fa56da" }
cloud_front = { git = "https://github.com/nikita-skobov/aws_cfn_type_gen", rev = "f903f340a75bcc64f22b63e130874282f3fa56da" }
cfn_resources = { git = "https://github.com/nikita-skobov/aws_cfn_type_gen", rev = "f903f340a75bcc64f22b63e130874282f3fa56da" }
