[package]
name = "real_world_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
hira = { path = "../hira" }
hira_lib = { path = "../hira_lib" }
tokio = { version = "*", features = ["full"]}
lambda_runtime = "*"
serde = { version = "*", features = ["derive"]}
serde_json = "*"

# our module depends on these other hira modules:
dotenv_reader = { path = "../level2/dotenv_reader" }
aws_lambda = { path = "../level2/aws_lambda" }
aws_cfn_stack = { path = "../level2/aws_cfn_stack" }
aws_s3 = { path = "../level2/aws_s3" }
aws_cloudfront_distribution = { path = "../level2/aws_cloudfront_distribution" }

# third party dependencies can be added via extern crate:
iam = { git = "https://github.com/nikita-skobov/aws_cfn_type_gen", rev = "99398fb19ca6a6cba23d922c82d58e572d1ea6b9" }
cloud_front = { git = "https://github.com/nikita-skobov/aws_cfn_type_gen", rev = "99398fb19ca6a6cba23d922c82d58e572d1ea6b9" }
cfn_resources = { git = "https://github.com/nikita-skobov/aws_cfn_type_gen", rev = "99398fb19ca6a6cba23d922c82d58e572d1ea6b9" }
