[package]
name = "dynamo_hashmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# these are the core dependencies, always required.
hira = { path = "../../" }
tokio = { version = "1.0", features = ["macros","io-util","sync","rt-multi-thread"] }
serde_json = "*"
lambda_runtime = "*"
serde = { version = "1.0", features = ["derive"]}

# these dependencies are necessary for lambda functions
aws-sdk-lambda = "0.24.0"
aws-sdk-s3 = "0.24.0"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
