[package]
name = "using_environment_variables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hira = { path = "../../" }
tokio = { version = "1.0", features = ["macros","io-util","sync","rt-multi-thread"] }
serde_json = "*"
lambda_runtime = "*"
serde = { version = "1.0", features = ["derive"]}
aws-sdk-lambda = "0.24.0"
aws-config = "0.54.1"
