[package]
name = "aws_lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfn_resources = { git = "https://github.com/nikita-skobov/aws_cfn_type_gen", rev = "66daeace6fbf11761026201728131bd9c668210b" }
lambda = { git = "https://github.com/nikita-skobov/aws_cfn_type_gen", rev = "66daeace6fbf11761026201728131bd9c668210b" }
s3 = { git = "https://github.com/nikita-skobov/aws_cfn_type_gen", rev = "66daeace6fbf11761026201728131bd9c668210b" }
iam = { git = "https://github.com/nikita-skobov/aws_cfn_type_gen", rev = "66daeace6fbf11761026201728131bd9c668210b" }
hira_lib = { path = "../../hira_lib" }
aws_cfn_stack = { path = "../aws_cfn_stack" }
hira = { path = "../../hira" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
aws-config = "0.55.2"
aws-sdk-cloudformation = "0.27.0"
aws-sdk-s3 = "0.27.0"
tokio = { version = "*", features = ["full"]}
zip = "0.6.6"
adler = "1.0.2"
sapp-jsutils = "0.1"